Fix body and h1 font-size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -136,14 +136,12 @@ div.image-3 {
 }
 
 @media (max-width: 800px) {
-    /*
     body {
-        font-size: 1em;
+        font-size: 1.5em;
     }
-    */
 
     h1 {
-        font-size: 2em;
+        font-size: 2.5em;
     }
 
     p.note {
